cphc-values-builder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: cphc-values-builder
  name: cphc-values-builder
  namespace: cphc-values-builder
spec:
  selector:
    matchLabels:
      app: cphc-values-builder 
  template:
    metadata:
      labels:
        app: cphc-values-builder
    spec:
      imagePullSecrets:
        - name: jlscode-registry-creds
      containers:
      - image: git.jlscode.com/jesse/cphc-values-builder:latest
        imagePullPolicy: Always
        name: cphc-values-builder
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-rrp88
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      nodeName: matrix
      preemptionPolicy: PreemptLowerPriority
      priority: 0
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 300
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 300
      volumes:
      - name: kube-api-access-rrp88
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
              - key: ca.crt
                path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
                path: namespace
