cphc-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-08-10T15:55:34Z"
  labels:
    run: cphc-values-builder
  name: cphc-values-builder
  namespace: default
  resourceVersion: "39170890"
  uid: bf331294-41d3-454f-951c-b598e5999fdb
spec:
  clusterIP: 10.98.143.66
  clusterIPs:
  - 10.98.143.66
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: cphc-values-builder
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
